# nodetool

./: .cursorignore  .dockerignore  .env.example  .gitignore  .oxlintrc.json  .pre-commit-config.yaml  .prettierrc  .pylintrc  AGENTS.md  ARCHITECTURE.md  AUDIT-PROGRESS.md  AUDIT-ROUND9-CANDIDATES.md  BASENODE_OPTIMIZATION_GUIDE.md  BETA_RELEASE_GAPS.md  BOLT_OPTIMIZATION.md  BOLT_OPTIMIZATION_NODE_OUTPUT.md  BOLT_OPTIMIZATION_RESULTS_STORE.md  BRAND.md  BUG-AUDIT-REPORT.md  Bolt-chat-optimization.md  Bolt: getSelectedNodes_caching.md  Bolt_Optimize_object_filtering_in_Zustand_stores.md  Bug_Fixes_Summary.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  COMFYUI_INTEGRATION.md  COMMAND_PALETTE_DESIGN.md  COMMAND_PALETTE_FEATURE.md  COMMAND_PALETTE_SECURITY.md  COMMAND_PALETTE_SUMMARY.md  COMMIT_REVIEW_REPORT.md  COMPLETION_REPORT.md  DEPLOY_TEST.md  DESIGN.md  DYNAMIC_NAMES_VALIDATION.md  Dockerfile  Dockerfile.api  Dockerfile.build  Dockerfile.runpod  (+148 more)
.Jules/: palette.md
.agent/: coverage_improvement_summary.md  final_coverage_summary.md  initial_coverage.md  test_coverage_plan.md
.claude/: settings.local.json
.codegen-cache/: 00d49710217bcdc5.json  0129106f3d2bc2c0.json  01aaa5883b6a1860.json  01c9ec21934e5f17.json  01d6aa3210996788.json  01d7aa02af9ad6cd.json  01df4779539ef0a9.json  02129b9dce8f14f2.json  024bf7ad16f88f6a.json  029f9149b8ca518c.json  02a202d7d88dce78.json  02e591411428e948.json  0351d287aa1b90ea.json  03959ebeb138e8d6.json  03aace06f2af714c.json  03d3a0f32404cf3f.json  04477d466348bafa.json  045557dba24d3ac3.json  04a320a7617d4819.json  04d7e8b8682a7916.json  0519228b4530b56d.json  057fc89813a0b42a.json  061c165ce80c2a48.json  065c01be1b040bc6.json  070bdf5209876f13.json  073f62247f13d028.json  079aa9b7717020f0.json  07d8b66d7bc6ce99.json  0817136c01023f26.json  081c5c5935fc5fe7.json  0835425e85b5b585.json  084a5221495b9a24.json  08b4bc1f094c690f.json  092496dbab6c76a6.json  0927f93b3b8c318a.json  092d869141260ce1.json  0b09fd060fda708c.json  0b763afaafeb54b8.json  0b9902326e19ce41.json  0bb8939bb4fa937f.json  (+1049 more)
.deploy/: ports.env
.design-sync/: NOTES.md  config.json  conventions.md  provider.tsx
.devcontainer/: Dockerfile  devcontainer.json
.github/: bot-guardrails.md  claude-instructions.md  copilot-instructions.md  dependabot.yml
.gpt-runner/: copilot.gpt.md
.husky/: pre-commit
.impeccable/: design.json
.jules/: bolt.md
.memory/: README.md  build-test-lint.md  features.md  journal.md  project-context.md  tech-stack.md
.tasks/: .gitignore  AGENTS.md  Gemfile  README.md  SCHEMA.md  _config.yml  index.md
__CHANGELOGS__/: v0.6.3-rc.11.md  v0.6.3-rc.16.md
ai_docs/: concurrent-node-runs-and-job-queueing.md
apps/: README.md  TESTING.md  eslint.config.mjs  index.css  index.html  index.tsx  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
chat_app/: README.md  index.html
chrome-extension/: README.md  TASKS.md  eslint.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/: .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  remotion.config.ts  tsconfig.json  tsconfig.tsbuildinfo
docs/: .gitignore  404.html  AGENTS.md  AGENT_CLI_QUICKREF.md  API_TO_WEBSOCKET_ANALYSIS.md  CLOUD_NODE_CURATION.md  CNAME  COMPONENT_STREAMLINE_PLAN.md  CREATIVE_AGENT_ROADMAP.md  DESIGN.md  DEVELOPMENT_STANDARDS.md  FEATURES_VERSIONING.md  Gemfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KERNEL_PARITY_GAPS.md  KERNEL_RUNNER_ANALYSIS.md  MOTION_GRAPHICS_PLAN.md  PERFORMANCE_PROFILER.md  PR_SUMMARY.md  README.md  REALTIME-BROWSER-JS-INFERENCE.md  RESEARCH-Report-SideBySideVersionDiff.md  RESEARCH-SideBySideVersionDiff.md  RESEARCH_REPORT_WORKFLOW_ANALYTICS.md  RESEARCH_REPORT_WORKFLOW_PROFILER.md  RESEARCH_REPORT_WORKFLOW_VERSIONING.md  RESEARCH_WORKFLOW_PROFILER.md  SCREENSHOTS.md  SEO_EXECUTION_PLAN.md  SEO_PROGRAMMATIC.md  SEO_STRATEGY.md  STUDIO_MVP_PROMPT.md  STUDIO_PRD.md  SYSTEM_OVERVIEW.md  TESTING_PROCESS.md  THEME.md  WORKFLOW_ANALYTICS_PROFILER.md  WORKFLOW_ASSET_ARCHITECTURE.md  WRITING_STYLE.md  (+129 more)
electron/: .env.example  .eslintrc.json  .oxlintrc.json  FLATHUB_PUBLISHING.md  FLATPAK.md  FLATPAK_BUILD_FIX.md  README.md  ai.nodetool.NodeTool.flatpak.yml  ai.nodetool.NodeTool.yml  ai.nodetool.flatpak.yml  ai.nodetool.yml  chat-interface.js  chat-runner.js  conda-unpack.bat  conda-unpack.nsh  conda-unpack.sh  config.js  dev-server-runner.cjs  electron-builder.json  entitlements.mac.plist  environment.yaml  eslint.config.mjs  events.js  flatpak-wrapper.sh  index.css  index.html  index.js  index.ts  input-generator.js  jest.config.ts  logger.js  main.js  npm-audit-electron.json  package-lock.json  package.json  playwright.config.ts  preload-workflow.js  preload-workflow.ts  preload.js  preload.ts  (+21 more)
examples/: README.md  Simple Chat.json  audio_to_image.py  image_upscaling.py  index_pdfs.py  package-metadata-example.yaml  run_workflow_streaming.js  run_workflow_websocket.js  sklearn_classifier.py  summarize_mail.py
marketing/: .gitignore  DESIGN.md  IMPROVEMENT_PLAN.md  LEGAL_OPEN_ITEMS.md  PRODUCT.md  README.md  VIDEO_SCRIPT.md  lighthouserc.json  next.config.mjs  open-next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  wrangler.jsonc
mobile/: .env.example  .oxlintrc.json  AGENTS.md  ARCHITECTURE.md  App.tsx  IMPLEMENTATION_SUMMARY.md  PRD_CHAT_FEATURE.md  QUICKSTART.md  README.md  app.json  eas.json  eslint.config.mjs  index.ts  jest.config.js  jest.setup.js  npm-audit-mobile.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
nodeviewer/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
notebooks/: chat.ipynb  docs.ipynb  dsl.ipynb  ollama.ipynb  sd.ipynb  supervision.ipynb
scripts/: AGENTS.md  (+98 more)
(+9980 files in other folders)
