[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool"
version = "0.6.0"
description = "Nodetool is a no-code development environment for Artificial Intelligence, enabling the simple and intuitive creation of powerful AI workflows and their integration into existing applications."
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = false
repository = "https://github.com/nodetool-ai/nodetool"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.5"
uvicorn = "0.32.0"
python-multipart = "0.0.17"
aiohttp = "3.11.2"
websockets = "14.1"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }

[tool.poetry.scripts]
nodetool = "nodetool.cli:cli"
