[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
pydantic = "^2.10.4"
python-multipart = "^0.0.17"
aiohttp = "^3.11.2"
websockets = "^14.1"
fastapi = "^0.115.5"
openapi-pydantic = "*"
uvicorn = "^0.32.0"
msgpack = "^1.1.0"
networkx = "^3.4.2"

# Utils dependencies
black = "^24.10.0"
click = "^8.1.7"
ftfy = "^6.3.1"
importlib_metadata = "*"
importlib-resources = "*"
joblib = "*"
jsonpath-ng = "^1.7.0"
jsonschema = "*"
psutil = "^6.1.0"
pynvml = "^12.0.0"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.2"
rich = "^13.9.4"
setuptools = "^75.1.0"
tabulate = "^0.9.0"
tomli = "^2.2.1"
tqdm = "^4.67.0"

# Document processing dependencies
bs4 = "^0.0.2"
langchain-text-splitters = "^0.3.4"
html2text = "*"
markitdown = "*"
PyMuPDF = "^1.25.2"
pymupdf4llm = "^0.0.17"

# AI dependencies
anthropic = "*"
huggingface_hub = "*"
openai = "*"
# fal-client = "0.5.6"
ollama = "*"
tiktoken = "*"
# replicate = "1.0.3"
# runpod = "1.7.6"
